<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartGameActivity" 
    android:orientation="vertical"
    android:background="#545D69">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#383641"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/img_represent"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/theme_display_image"
            android:scaleType="fitXY"
            android:src="@drawable/mustaches_represent" />

        <ImageView
            android:id="@+id/play_game"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@+id/img_represent"
            android:layout_alignRight="@+id/img_represent"                        
            android:src="@drawable/icon_play" 
            android:contentDescription="@string/desc"/>
    </RelativeLayout>
    <HorizontalScrollView      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout 
            android:id="@+id/trends_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">            
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp">
        
        <ImageView
            android:id="@+id/settings_view"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/icon_settings"            
            android:layout_marginRight="10dp" 
            android:contentDescription="@string/theme_options"/>
        
        <ImageView
            android:id="@+id/albums_view" 
            android:layout_height="80dp"
            android:layout_width="0dp" 
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/icon_albums"
            android:contentDescription="@string/theme_albums"/>
    </LinearLayout>
        
</LinearLayout>
