<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#131212"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin">
        <TextView        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:text="@string/transit_score_title" />
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6">            
            <ImageView
                android:id="@+id/us_5" 
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:src="@drawable/big0" 
                android:contentDescription="@string/desc"
                android:layout_weight="1"/>
            <ImageView 
                android:id="@+id/us_4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:src="@drawable/big0"
                android:contentDescription="@string/desc"
                android:layout_weight="1"/>
            <ImageView 
                android:id="@+id/us_3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:src="@drawable/big0"
                android:contentDescription="@string/desc"
                android:layout_weight="1"/>
            <ImageView 
                android:id="@+id/us_2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:src="@drawable/big0"
                android:contentDescription="@string/desc"
                android:layout_weight="1"/>
            <ImageView 
                android:id="@+id/us_1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:src="@drawable/big0"
                android:contentDescription="@string/desc"
                android:layout_weight="1"/>
            <ImageView 
                android:id="@+id/us_0"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:src="@drawable/big0"
                android:contentDescription="@string/desc"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textSize="16sp"        		
        		android:textColor="#FFFFFF"
        		android:layout_marginTop="5dp"
        		android:layout_marginRight="20dp"
        		android:text="@string/transit_highscore" />
            <LinearLayout 
                android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:orientation="horizontal"
            	android:weightSum="6">
                <ImageView
                    android:id="@+id/hs_5" 
                	android:layout_width="0dp"
                	android:layout_height="30dp"
                	android:src="@drawable/small0"
                	android:layout_weight="1" 
                	android:contentDescription="@string/desc"/>
	            <ImageView
	                android:id="@+id/hs_4" 
	                android:layout_width="0dp"
	                android:layout_height="30dp"
	                android:src="@drawable/small0"
	                android:layout_weight="1"
	                android:contentDescription="@string/desc"/>
	            <ImageView 
	                android:id="@+id/hs_3"
	                android:layout_width="0dp"
	                android:layout_height="30dp"
	                android:src="@drawable/small0"
	                android:layout_weight="1"
	                android:contentDescription="@string/desc"/>
	            <ImageView 
	                android:id="@+id/hs_2"
	                android:layout_width="0dp"
	                android:layout_height="30dp"
	                android:src="@drawable/small0"
	                android:layout_weight="1"
	                android:contentDescription="@string/desc"/>
	            <ImageView 
	                android:id="@+id/hs_1"
	                android:layout_width="0dp"
	                android:layout_height="30dp"
	                android:src="@drawable/small0"
	                android:layout_weight="1"
	                android:contentDescription="@string/desc"/>
	            <ImageView 
	                android:id="@+id/hs_0"
	                android:layout_width="0dp"
	                android:layout_height="30dp"
	                android:src="@drawable/small0"
	                android:layout_weight="1"
	                android:contentDescription="@string/desc"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#85B146"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/score_up_layout"
			    android:layout_marginLeft="-5dp"
			    android:layout_marginRight="-5dp"
			    android:layout_marginTop="-5dp"
			    android:weightSum="2">
			    <ImageView 
			    	android:layout_width="30dp"
			    	android:layout_height="30dp"
			    	android:src="@drawable/icon_fb"
			    	android:layout_gravity="center" 
			    	android:contentDescription="@string/desc"
			    	android:layout_weight="1"/>
			    <ImageView 
			    	android:layout_width="30dp"
			    	android:layout_height="30dp"
			    	android:src="@drawable/icon_global"
			    	android:layout_gravity="center"
			    	android:contentDescription="@string/desc"
			    	android:layout_weight="1"/>
			</LinearLayout>
			
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/score_down_layout"
			    android:orientation="vertical">
			    <TextView 
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"			    	
			    	android:layout_gravity="center"			    	
			    	android:textSize="16sp" 
			    	android:textColor="#FFFFFF"
			    	android:paddingLeft="60dp"
			    	android:text="@string/view_leaderboard"/>

			    <ImageView 
			    	android:layout_width="10dp"
			    	android:layout_height="10dp"
			    	android:src="@drawable/icon_down"
			    	android:layout_gravity="center"
			    	android:contentDescription="@string/desc"/>
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:background="@drawable/pedagog_border"
			    android:orientation="vertical">
			    <TextView 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="18sp"
			        android:text="@string/pedagog_title"/>			    
			    <TextView
			        android:id="@+id/id_pedagog_desc" 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="14sp"
			        android:text="@string/pedagog_desc"/>
			</LinearLayout>

		</LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="10dp"            
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/replay" 
                android:layout_width="0dp"
                android:layout_height="70dp"              
                android:layout_weight="1"
                android:src="@drawable/icon_replay" 
                android:contentDescription="@string/desc"/>
            <ImageView
                android:id="@+id/vs" 
                android:layout_width="0dp"
                android:layout_height="70dp"                
                android:layout_weight="1"
                android:src="@drawable/icon_vs"
                android:contentDescription="@string/desc"/>
            <ImageView 
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="70dp"                
                android:layout_weight="1"
                android:src="@drawable/icon_home"
                android:contentDescription="@string/desc"/>
        </LinearLayout>
    </LinearLayout>
    

</LinearLayout>
